# mpt-solver

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  client_ivp.c  client_nls.c  client_report.c  data_grid.c  data_param.c  data_timeradd.c  libinfo.c  meson.build  meson_options.txt  mptsolver-uninstalled.pc  residuals_cdiff.c  solver.h  solver_param.c  solver_pset.c  step_pde.c
examples/: .gitignore  CMakeLists.txt  Makefile  check.cpp  client.conf  client.cpp  config.c  data.cpp  libassign.c  loadsol.c  main.c  main_ivp.c  main_nls.c  meson.build  output.cpp  proxy.c  solver.example.mk  solver_ivp.h  solver_nls.h  solver_run.c  solver_run.h  solvers.cpp  vecpar.cpp
examples/bacol/: .gitignore  Makefile  bacol.cpp  sys4.c  sys4.conf  sys4_fcn.c
examples/dae/: .gitignore  Makefile  cakzo.c  cakzo.conf  main.c  meson.build  robertson.c  robertson.conf  robertson_sol.conf
examples/nls/: .gitignore  Makefile  main.c  neter.c  neter.conf
examples/ode/: .gitignore  Makefile  crackoil.c  crackoil.conf  main.c  meson.build
examples/pde/: .gitignore  Makefile  diff.c  diff.conf  diff_sol.conf  flame.c  flame.conf  flame_sol.conf  htrans.c  htrans.conf  htrans_sol.conf  main.c  makzo.c  makzo.conf  meson.build  twoeq.c  twoeq.conf  twoeq_sol.conf
modules/: .gitignore  Makefile  ivppar_set.c  meson.build  mod_consume_value.c  mod_generic_conv.c  mod_ivpset.c  mod_nextval.c  mod_nlsset.c  mod_report_properties.c  mod_tol_check.c  mod_tol_get.c  mod_tol_set.c  mod_ufcn_dae.c  mod_ufcn_nls.c  mod_ufcn_ode.c  mod_valloc.c  mod_value.c  modfcn_data_set.c  modfcn_ivp_state.c  modfcn_ivp_values.c  modfcn_ivp_vecset.c  modfcn_solver_conv.c  mpt.solver.mk  nlspar_set.c  solver_cktol.c  solver_daefcn.c  solver_data_new.c  solver_data_set.c  solver_generic_conv.c  solver_ivp_settime.c  solver_ivp_state.c  solver_ivp_values.c  solver_ivp_vecset.c  solver_ivpset.c  solver_ivpstate.c  solver_ivpvec_set.c  solver_modfcn.h  solver_nlsset.c  solver_odefcn.c  (+16 more)
modules/bacol/: Makefile  README.md  bacol.conf  bacol.h  bacol.info  bacol_assign.c  bacol_backend.c  bacol_create.c  bacol_finit.c  bacol_grid_init.c  bacol_modfcn.c  bacol_output.c  bacol_prepare.c  bacol_property.c  bacol_report.c  bacol_sstep.c  bacol_step.c  bacol_values.c  bacolout.c  libinfo.c  module_functions.h
modules/daesolv/: Makefile  README.md  daesolv.conf  daesolv.info  daesolv_ivpvec_set.c  daesolv_modfcn.c  daesolv_ufcn.c  daesolv_values.c  daesolv_vecset.c  dassl.h  libinfo.c  mebdfi.h  module_functions.h  radau.h  solver_daefcn.h  solver_yprime.h
modules/daesolv/dassl/: dassl_create.c  dassl_finit.c  dassl_prepare.c  dassl_property.c  dassl_report.c  dassl_step.c  dassl_ufcn.c
modules/daesolv/mebdfi/: mebdfi_create.c  mebdfi_finit.c  mebdfi_prepare.c  mebdfi_property.c  mebdfi_report.c  mebdfi_step.c  mebdfi_ufcn.c
modules/daesolv/radau/: radau_create.c  radau_finit.c  radau_prepare.c  radau_property.c  radau_report.c  radau_step.c  radau_ufcn.c
modules/limex/: Makefile  README.md  libinfo.c  limex.conf  limex.h  limex.info  limex_create.c  limex_finit.c  limex_modfcn.c  limex_prepare.c  limex_property.c  limex_report.c  limex_step.c  limex_ufcn.c  module_functions.h
modules/nlblas/: Makefile  README.md  libinfo.c  nlblas.info
modules/nlblas/imsl/: imsl.mk
modules/nlsolv/: Makefile  README.md  libinfo.c  minpack.h  module_functions.h  nlsolv.conf  nlsolv.info  nlsolv_modfcn.c
modules/nlsolv/minpack/: minpack.h  minpack.mk  minpack_create.c  minpack_finit.c  minpack_prepare.c  minpack_property.c  minpack_report.c  minpack_solve.c  minpack_step.c  minpack_ufcn.c  minpack_ufcn_hybrid.c  minpack_ufcn_lmderv.c
modules/nlsolv/portn2/: portdn2.mk  portn2.h  portn2_create.c  portn2_finit.c  portn2_prepare.c  portn2_property.c  portn2_report.c  portn2_residuals.c  portn2_solve.c  portn2_step.c  (+1 more)
modules/sundials/: Makefile  README.md  data_new.c  ewtfcn.c  jacobian.c  libinfo.c  meson.build  module_functions.h  nvector.c  report.c  sundials.cmake  sundials.conf  sundials.h  sundials.info  sundials.md  sundials_collect.sh  sundials_data_new.c  sundials_ewtfcn.c  sundials_finit.c  sundials_jacobian.c  sundials_linear.c  sundials_modfcn.c  sundials_modfcn.h  sundials_nvector.c  sundials_report.c  values_ivp.c  vector_set.c
modules/vode/: Makefile  README.md  libinfo.c  module_functions.h  vode.conf  vode.h  vode.info  vode_create.c  vode_finit.c  vode_modfcn.c  vode_modfcn.h  vode_prepare.c  vode_property.c  vode_report.c  vode_step.c  vode_ufcn.c
mptsolver/: CMakeLists.txt  Makefile  client_ivp.c  client_nls.c  clientdata.c  conf_graphic.c  conf_history.c  conf_nls.c  conf_ode.c  conf_param.c  conf_pde.c  data_finit.c  data_grid.c  data_nls.c  init_ivp.c  init_nls.c  init_pde.c  libinfo.c  meson.build  output_nls.c  output_pde.c  output_solver_data.c  output_solver_history.c  residuals_cdiff.c  solver_alias.c  solver_args.c  solver_assign.c  solver_check.c  solver_config.c  solver_conv.c  solver_data_fini.c  solver_dispatch.c  solver_events.c  solver_load.c  solver_output_query.c  solver_param.c  solver_print.c  solver_pset.c  solver_read.c  solver_require.c  (+10 more)
mptsolver/conf/: conf_graphic.c  conf_grid.c  conf_history.c  conf_ivp.c  conf_nls.c  conf_ode.c  conf_param.c  conf_pde.c  conf_profile.c  conf_profiles.c  meson.build
mptsolver/data/: meson.build  solver_data_fini.c  solver_data_grid.c  solver_data_nls.c  solver_data_param.c
mptsolver/ivp/: client_ivp.c  conf_grid.c  conf_iter.c  conf_ivp.c  conf_profiles.c  init_ivp.c  init_pde.c  ivp_data.c  meson.build  output_ivp_header.c  residuals_cdiff.c  solver_data_grid.c  solver_output_ode.c  solver_output_pde.c  solver_setvalue.c  solver_steps_ode.c  steps_ode.c
mptsolver/nls/: client_nls.c  conf_nls.c  init_nls.c  meson.build  solver_data_nls.c  solver_data_param.c  solver_output_nls.c
mptsolver/output/: meson.build  output_ivp_header.c  output_solver_data.c  output_solver_history.c  solver_output_close.c  solver_output_logger.c  solver_output_nls.c  solver_output_ode.c  solver_output_pde.c  solver_output_query.c
(+34 files in other folders)
