# meson.build.gen: *.c
src = files(
  'client_ivp.c',
  'conf_grid.c',
  'conf_iter.c',
  'conf_ivp.c',
  'conf_profiles.c',
  'init_ivp.c',
  'init_pde.c',
  'ivp_data.c',
  'output_ivp_header.c',
  'residuals_cdiff.c',
  'solver_data_grid.c',
  'solver_output_ode.c',
  'solver_output_pde.c',
  'solver_setvalue.c',
  'solver_steps_ode.c',
)
